Activate Checkstyle static code analysis
- Customize ruleset
- Fix numerous checkstyle warnings
- Format code as required